--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: dev-container
-        image: us-east1-docker.pkg.dev/qwiklabs-gcp-00-91c8f643727f/my-repository/hello-cloudbuild-dev
+        image: us-east1-docker.pkg.dev/qwiklabs-gcp-00-91c8f643727f/my-repository/hello-cloudbuild-dev:v2.0
         ports:
         - containerPort: 8080
